# tide-example

./: .gitignore  .qovery.yml  Cargo.toml  Dockerfile  Procfile  README.md  app.json
db/: sqlite3.db
src/: main.rs
